--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
   <div id="canvas">
     <div class="note" style="background-color:#fff89a; top:10px; left:10px;">Очікувані результати навчання</div>
     <div class="note" style="background-color:#ffb3ba; top:10px; left:210px;">Ключові компетентності</div>
-    <div class="note" style="background-color:#baffc9; top:10px; left:410px;">Цінності освіти</div>
-    <div class="note" style="background-color:#bae1ff; top:120px; left:10px;">Запит учнів</div>
+    <div class="note" style="background-color:#baffc9; top:10px; left:410px;">Наскрізні уміння</div>
+    <div class="note" style="background-color:#bae1ff; top:120px; left:10px;">Запити учнівства</div>
     <div class="note" style="background-color:#ffffba; top:120px; left:210px;">Методи оцінювання</div>
-    <div class="note" style="background-color:#ffdfba; top:120px; left:410px;">Критерії успіху</div>
-    <div class="note" style="background-color:#e0bbff; top:230px; left:10px;">Навчальні активності</div>
+    <div class="note" style="background-color:#ffdfba; top:120px; left:410px;">Критерії успішності</div>
+    <div class="note" style="background-color:#e0bbff; top:230px; left:10px;">Навчальні діяльності</div>
     <div class="note" style="background-color:#d0f0c0; top:230px; left:210px;">Ресурси й інструменти</div>
-    <div class="note" style="background-color:#c9c9ff; top:230px; left:410px;">Індивідуальні освітні траєкторії</div>
+    <div class="note" style="background-color:#c9c9ff; top:230px; left:410px;">Індивідуальні освітні потреби</div>
   </div>
   <button id="screenshotBtn">Зробити скріншот</button>
 
