--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </style>
 </head>
 <body>
-  <h2>Зворотний дизайн освітнього процесу</h2>
+  <h2>Дизайн освітнього процесу</h2>
   <div id="canvas">
     <div class="note" style="background-color:#fff89a; top:10px; left:10px;">Очікувані результати навчання</div>
     <div class="note" style="background-color:#ffb3ba; top:10px; left:210px;">Ключові компетентності</div>
